--- a/toDo.html
+++ b/toDo.html
@@ -25,7 +25,7 @@
                                                                  type="checkbox"/>
                 <input id="taskName"
                        placeholder="Task Name" ng-model="toDo.name"/>
-                <button title="Delete Task" class="glyphicon glyphicon-trash" ng-click="$ctrl.remove($index)"></button>
+                <span title="Delete Task" class="glyphicon glyphicon-trash" ng-click="$ctrl.remove($index)"></span>
             </div>
 
             <!--created by bryce groesbeck-->
