--- a/toDo.html
+++ b/toDo.html
@@ -3,7 +3,7 @@
 <div class="wrapper">
     <div class="list">
         <div>
-            <input title="Give your list a name" id="listName" placeholder="List Name"/>
+            <input title="Give your list a name" id="listName" placeholder="Enter List Name"/>
 
             <div class="col-sm-12">
                 <button class="btn-warning btn-sm" ng-click="$ctrl.newList()">Create New List</button>
@@ -24,7 +24,7 @@
             <div ng-repeat="toDo in $ctrl.todoModel.list"><input title="Mark Complete" ng-model="toDo.completed"
                                                                  type="checkbox"/>
                 <input id="taskName"
-                       placeholder="Task Name" ng-model="toDo.name"/>
+                       placeholder="Enter Task Name" ng-model="toDo.name"/>
                 <span title="Delete Task" class="glyphicon glyphicon-trash" ng-click="$ctrl.remove($index)"></span>
             </div>
 
