--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         <a ui-sref="home" ui-sref-active="active">Home</a>
         <a ui-sref="about" ui-sref-active="active">About</a>
 
+        <div class="col-sm-12">
+            <button class="btn-warning btn-sm" ng-click="ctrl.newList()">Create New List</button>
+            <!--created by bryce groesbeck-->
+        </div>
+
+        <ul class="nav nav-tabs">
+            <!--<li class="active"><a href="#">Home</a></li>-->
+            <li ng-repeat="list in ctrl.lists" ng-click="ctrl.tabClicked(list);"><a href="#">{{list.listName}}</a></li>
+
+        </ul>
 
         <ui-view></ui-view>
 
