--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <style>.active {
-        color: red;
+        color: #454545;
         font-weight: bold;
     }</style>
 </head>
@@ -31,7 +31,7 @@
 <body>
 <!--created by bryce groesbeck-->
 
-<h1 class="htag">Bryce Groesbeck: To Do List APP</h1>
+<h1 class="htag">Bryce Groesbeck: To Do List App</h1>
 
 <div id="router">
     <div class="container-fluid"
