--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <!--created by bryce groesbeck-->
 
-<h1 class="htag">Bryce Groesbeck: To Do List App</h1>
+<h1 class="htag">NG : To Do List</h1>
 
 <div id="router">
     <div class="container-fluid"
