changed text color on added task.

--- a/toDo.html
+++ b/toDo.html
@@ -27,7 +27,7 @@
 
                     <input ng-model="task.completed" type="checkbox"/>
 
-                    <span  >{{ task.name | capit }}</span>
+                    <span class="textColor"  >{{ task.name | capit }}</span>
 
                     <span class="glyphicon glyphicon-trash" ng-click="$ctrl.remove($index)"></span>
                 </div>
